--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="coloured_checkbox" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">#FFFFFF</item>
+        <item name="android:textColorSecondary">#3ED55F</item>
+    </style>
 </resources>
