--- a/app/src/main/res/layout/fragment_analytic.xml
+++ b/app/src/main/res/layout/fragment_analytic.xml
@@ -20,15 +20,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="50dp"
+                android:layout_marginBottom="30dp"
                 android:text="Analytics"
                 android:textSize="45sp"
                 app:fontFamily="@font/montserrat_bold" />
 
             <ImageView
-                android:id="@+id/user_analytics"
+                android:id="@+id/user_freq"
                 android:layout_width="350dp"
-                android:layout_height="400dp"
+                android:layout_height="300dp"
+                android:layout_gravity="center_horizontal"
+                android:adjustViewBounds="true" />
+
+            <ImageView
+                android:id="@+id/user_expense"
+                android:layout_width="350dp"
+                android:layout_height="300dp"
                 android:layout_gravity="center_horizontal"
                 android:adjustViewBounds="true" />
 
